src/test/deca/context/valid/provided/methodcall.deca
class A {
 int x = 2;
 int getX() {
   return this.x;
}
 void setX(int x) {
  int y = getX();
  this. x = x;
}
}

{
 A a = new A();
 a.setX(2);
 println(a.x);
 println(a.getX());
}
