src/test/deca/context/invalid/provided/testi38.deca
class A{
    protected int x;
    int getX(){
        return x;
    }
}
{
    float b;
    int x = b.getX();
}